--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
   </head>
 
   <body>
-    <header>Vian</header>
+    <header>
+      <h1>vian</h1>
+      <nav>
+        <a href="https://player.vimeo.com/video/36943753">sending 14B</a>
+
+        <a href="#">projects</a>
+
+        <a href="#">work</a>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <div id="box-1">1</div>
+        <div id="box-2">2</div>
+        <div id="box-3">3</div>
+        <div id="box-4">4</div>
+        <div id="box-5">5</div>
+      </section>
+    </main>
   </body>
 </html>
