--- a/index.html
+++ b/index.html
@@ -1,30 +1,73 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Flexbox Demo</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FlexBox Demo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-
   <body>
+    <!-- flex container -->
+
     <header>
-      <h1>vian</h1>
+      <h1>Vian Charbonneau</h1>
       <nav>
-        <a href="https://player.vimeo.com/video/36943753">sending 14B</a>
-
-        <a href="#">projects</a>
-
-        <a href="#">work</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Climbing</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
       </nav>
     </header>
+
+    <section class="container"></section>
     <main>
-      <section>
+      <section class="container">
+        <h2 className="head-text">
+          Passionate About <span>Learning</span>
+          <br />
+        </h2>
         <div id="box-1">1</div>
         <div id="box-2">2</div>
         <div id="box-3">3</div>
-        <div id="box-4">4</div>
-        <div id="box-5">5</div>
       </section>
+
+      <section class="container">
+        <h2 className="head-text">
+          Passionate about <span>Climbing</span>
+          <br />
+        </h2>
+        <div id="box-6">6</div>
+        <div id="box-7">7</div>
+        <div id="box-8">8</div>
+      </section>
+
+      <section class="container">
+        <h2 className="head-text">
+          Social <span>Media</span>
+          <br />
+        </h2>
+        <div id="box-6">6</div>
+        <div id="box-7">7</div>
+        <div id="box-8">8</div>
+      </section>
+
+      <section class="container">
+        <h2 className="head-text">
+          I would love to chat with <span>You</span>
+          <br />
+        </h2>
+        <div id="box-6">6</div>
+        <div id="box-7">7</div>
+        <div id="box-8">8</div>
+      </section>
+      <footer>@vianvianc 2022</footer>
     </main>
   </body>
 </html>
