added readme and changed portfolio seciton

--- a/index.html
+++ b/index.html
@@ -35,15 +35,14 @@
     <main>
       <section class="container" id="portfolio">
         <h2 className="head-text">
-          Passionate About <span>Learning</span>
+          React <span>Portfolio</span>
           <br />
         </h2>
         
           <a
-          href="https://vianvianc.github.io/horiseon/#search-engine-optimization"
+          href="https://vianvianc.github.io/react_portfolio/"
           target="_blank"
-          ><i class="fa-solid fa-diagram-project fa-6x fa-beat"></i
-        ></a>
+          ><img src="images/react.png"</a>
         
       </section>
       <section class="container" id="skills">
